# LLMToolSecurityMiddleware

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/scenarios/: benign_security_article.json  external_email_requires_approval.json  malicious_email_exfiltration.json  malicious_pdf_file_write.json  safe_search.json  secret_in_search_query.json  tool_output_injection.json
middleware/: __init__.py  demo.py  detectors.py  eval.py  logger.py  middleware.py  mock_tools.py  models.py  policy.py  response_firewall.py  secrets.py  taint.py
policies/: default_policy.json
tests/: test_eval.py  test_middleware.py
